--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .DS_Store
 node_modules
 /dist
-
-
+deploy.sh
 # local env files
 .env.local
 .env.*.local
@@ -21,4 +20,3 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-node_modules
