--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "question",
+  "name": "costdo-works",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.3",
+    "@vee-validate/rules": "^4.7.3",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "core-js": "^3.6.5",
+    "mitt": "^3.0.0",
+    "sweetalert2": "^11.6.16",
+    "vee-validate": "^4.7.3",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "6.0",
+    "vue-router": "^4.0.0-0",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.17",
@@ -18,15 +29,33 @@
     "@vue/cli-plugin-router": "~4.5.17",
     "@vue/cli-service": "~4.5.17",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "prettier": "^2.8.1",
+    "prettier-eslint": "^15.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
-  }
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "@vue/airbnb"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
